Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125858

REG: Wrong result value in QMessageBox::warning detected in version 6.7.1

XMLWordPrintable

    • Linux/X11
    • a428c6933 (6.7.2), 5b151ea2d (dev), 3964d03f3 (6.8), e4b877993 (6.7)

      Steps to reproduce the issue:

      1. Build and run the attached example with Qt version 6.7.1

      The bug can be seen on this line of code: 

      QMessageBox::warning(qApp->activeWindow(), "title", "text", "answer 0", "answer 1", "", 1, 1);

      The result for "answer 0" is 2, "answer 1" is 3. This bug is not seen on Qt5, Qt 6.6.1, Qt 6.7.0

        For Gerrit Dashboard: QTBUG-125858
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            kitruong Kinh Truong
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes